@@ -92,14 +92,15 @@ sub gather_file_travis_yml
                           q{#  - cpanm -n Foo::Bar},
                           q{},
                           q{perl:},
-                          (map { "  - \"5.$_\""} qw( 8 10 12 14 16 18 )),
+                          (map { "  - \"5.$_\""} qw( 8 10 12 14 16 18 20 )),
                           q{},
                           q{#env:},
                           q{#  - FOO=bar},
                           q{},
                           q{#before_script: /bin/true},
                           q{},
-                          q{script: HARNESS_IS_VERBOSE=1 prove -lv t xt},
+                          q{script:},
+                          q{  - dzil test},
                           q{},
                           q{#after_script: /bin/true},
                           q{},
